# cryptopglib

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Makefile  conanfile.txt
cryptopg_app/: CMakeLists.txt  main.cpp
cryptopg_app/example_data/: example1_pub.asc  example1_sec.asc
cryptopg_app/model/: pgp_key.cpp  pgp_key_info.cpp  pgp_key_info.h  utils.cpp  utils.h
cryptopg_rest_service/: CMakeLists.txt  cryptopg_rest_service.cpp
src/: CMakeLists.txt  IOpenPGPInfoGetter.h  OpenPGPImpl.cpp  OpenPGPImpl.h  PGPErrors.cpp  PGPMessageImpl.cpp  PGPMessageImpl.h  cryptopg.cpp  iopenpgp_info_getter.h  open_pgp_impl.cpp  open_pgp_impl.h  openpgp_info_getter.h  pgp_errors.cpp  pgp_key.cpp  pgp_message.cpp  pgp_message_impl.cpp  pgp_message_impl.h
src/Crypto/: CMakeLists.txt  CompressionAlgorithms.cpp  CompressionAlgorithms.h  HashAlgorithms.cpp  HashAlgorithms.h  KeyGenerator.cpp  KeyGenerator.h  PGPDecrypt.cpp  PGPDecrypt.h  PGPEncrypt.cpp  PGPEncrypt.h  PGPKeyData.cpp  PGPKeyData.h  PGPSignature.cpp  PGPSignature.h  PublicKeyAlgorithms.h  PublicKeyAlgorithmsImpl.cpp  PublicKeyAlgorithmsImpl.h  SymmetricKeyAlgorithms.cpp  SymmetricKeyAlgorithms.h
src/PGPCreator/: CMakeLists.txt  PGPCreator.cpp  PGPCreator.h
src/PGPData/: CMakeLists.txt  PGPPacket.cpp  PGPPacket.h  PGPPacketTypes.h
src/PGPData/Packets/: CMakeLists.txt  CompressedDataPacket.cpp  CompressedDataPacket.h  LiteralDataPacket.cpp  LiteralDataPacket.h  MarkerPacket.cpp  MarkerPacket.h  ModificationDetectionCodePacket.cpp  ModificationDetectionCodePacket.h  OnePassSignaturePacket.cpp  OnePassSignaturePacket.h  PublicKeyEncryptedPacket.cpp  PublicKeyEncryptedPacket.h  PublicKeyPacket.cpp  PublicKeyPacket.h  SecretKeyPacket.cpp  SecretKeyPacket.h  SignaturePacket.cpp  SignaturePacket.h  SymmetricKeyEncryptedSessionKeyPacket.cpp  SymmetricKeyEncryptedSessionKeyPacket.h  SymmetricallyEncryptedDataPacket.cpp  SymmetricallyEncryptedDataPacket.h  TrustPacket.cpp  TrustPacket.h  UserAttributePacket.cpp  UserAttributePacket.h  UserIDPacket.cpp  UserIDPacket.h
src/PGPParser/: CMakeLists.txt  PGPMessageParser.cpp  PGPMessageParser.h  PGPPacketsParser.cpp  PGPPacketsParser.h  PGPParser.cpp  PGPParser.h
src/PGPParser/PacketParsers/: CMakeLists.txt  CompressedDataPacketParser.cpp  CompressedDataPacketParser.h  LiteralDataPacketParser.cpp  LiteralDataPacketParser.h  MarkerPacketParser.cpp  MarkerPacketParser.h  ModificationDetectionCodePacketParser.cpp  ModificationDetectionCodePacketParser.h  OnePassSignaturePacketParser.cpp  OnePassSignaturePacketParser.h  PacketParser.cpp  PacketParser.h  PublicKeyEnctyptedPacketParser.cpp  PublicKeyEnctyptedPacketParser.h  PublicKeyPacketParser.cpp  PublicKeyPacketParser.h  SecretKeyPacketParser.cpp  SecretKeyPacketParser.h  SignaturePacketParser.cpp  SignaturePacketParser.h  SymmetricKeyEncryptedSessionKeyPacketParser.cpp  SymmetricKeyEncryptedSessionKeyPacketParser.h  SymmetricallyEncryptedDataPacketParser.cpp  SymmetricallyEncryptedDataPacketParser.h  TrustPacketParser.cpp  TrustPacketParser.h  UserAttributePacketParser.cpp  UserAttributePacketParser.h  UserIDPacketParser.cpp  UserIDPacketParser.h
src/Utils/: CMakeLists.txt  DataBuffer.cpp  DataBuffer.h  base64.cpp  base64.h  crc24.cpp  crc24.h
src/crypto/: CMakeLists.txt  compression_algorithms.cpp  compression_algorithms.h  hash_algorithm.cpp  hash_algorithm.h  hash_algorithms.cpp  hash_algorithms.h  key_generator.cpp  key_generator.h  pgp_encrypt.cpp  pgp_encrypt.h  pgp_key_data.cpp  pgp_key_data.h  pgp_signature.cpp  pgp_signature.h  pgpg_decrypt.cpp  pgpg_decrypt.h  public_key_algorithms.h  public_key_algorithms_impl.cpp  public_key_algorithms_impl.h  symmetric_key_algorithm.cpp  symmetric_key_algorithm.h  symmetric_key_algorithms.cpp  symmetric_key_algorithms.h
src/pgp_creator/: CMakeLists.txt  pgp_creator.cpp  pgp_creator.h
src/pgp_data/: CMakeLists.txt  pgp_data_types.h  pgp_packet.cpp  pgp_packet.h  pgp_packet_types.h
src/pgp_data/packets/: CMakeLists.txt  compressed_data_packet.cpp  compressed_data_packet.h  literal_data_packet.cpp  literal_data_packet.h  marker_packet.cpp  marker_packet.h  modification_detection_code_packet.cpp  modification_detection_code_packet.h  one_pass_signature_packet.cpp  one_pass_signature_packet.h  public_key_encrypted_packet.cpp  public_key_encrypted_packet.h  public_key_packet.cpp  public_key_packet.h  secret_key_packet.cpp  secret_key_packet.h  signature_packet.cpp  signature_packet.h  symmetric_key_encrypted_session_key_packet.cpp  symmetric_key_encrypted_session_key_packet.h  symmetrically_encrypted_data_packet.cpp  symmetrically_encrypted_data_packet.h  trust_packet.cpp  trust_packet.h  user_attribute_packet.cpp  user_attribute_packet.h  user_id_packet.cpp  user_id_packet.h
src/pgp_parser/: CMakeLists.txt  pgp_message_parser.cpp  pgp_message_parser.h  pgp_packets_parser.cpp  pgp_packets_parser.h  pgp_parser.cpp  pgp_parser.h
src/pgp_parser/packet_parsers/: CMakeLists.txt  (+32 more)
src/utils/: CMakeLists.txt  base64.cpp  base64.h  crc24.cpp  crc24.h  data_buffer.cpp  data_buffer.h  parsing_data_buffer.cpp  parsing_data_buffer.h
tests/: CMakeLists.txt  cryptopglib_message_parser_tests.cpp
tests/test_data/: private_key.asc  public_key.asc
(+15 files in other folders)
